# vulpi

./: Cargo.toml  README.md  ata.vp
crates/vulpi-build/: Cargo.toml
crates/vulpi-build/src/: error.rs  lib.rs  module.rs  project.rs  real.rs
crates/vulpi-cli/: Cargo.toml
crates/vulpi-cli/src/: main.rs
crates/vulpi-desugar/: Cargo.toml
crates/vulpi-desugar/src/: error.rs  lib.rs
crates/vulpi-intern/: Cargo.toml
crates/vulpi-intern/src/: lib.rs  no_rc.rs
crates/vulpi-ir/: Cargo.toml
crates/vulpi-ir/src/: dead_code.rs  first_pass.rs  inline.rs  ir.rs  lib.rs  pattern.rs  transform.rs  uncurry.rs
crates/vulpi-js/: Cargo.toml
crates/vulpi-js/src/: lib.rs
crates/vulpi-lexer/: Cargo.toml
crates/vulpi-lexer/src/: error.rs  lib.rs  literals.rs  state.rs  token.rs
crates/vulpi-location/: Cargo.toml
crates/vulpi-location/src/: lib.rs
crates/vulpi-lsp/: Cargo.toml
crates/vulpi-lsp/src/: lib.rs
crates/vulpi-macros/: Cargo.toml
crates/vulpi-macros/src/: lib.rs
crates/vulpi-parser/: Cargo.toml  README.md
crates/vulpi-parser/src/: error.rs  expr.rs  identifier.rs  lib.rs  literal.rs  pattern.rs  top_level.rs  type.rs
crates/vulpi-parser/src/lexer/: mod.rs
crates/vulpi-query/: Cargo.toml
crates/vulpi-report/: Cargo.toml
crates/vulpi-report/src/: hash.rs  lib.rs
crates/vulpi-report/src/renderer/: classic.rs  mod.rs
crates/vulpi-resolver/: Cargo.toml
crates/vulpi-resolver/src/: ambiguity.rs  context.rs  cycle.rs  declare.rs  dependencies.rs  error.rs  io.rs  lib.rs  module_tree.rs  namespace.rs  paths.rs  resolve.rs  scope.rs  scopes.rs
crates/vulpi-show/: Cargo.toml
crates/vulpi-show/src/: lib.rs
crates/vulpi-storage/: Cargo.toml
crates/vulpi-storage/src/: id.rs  lib.rs
crates/vulpi-storage/src/file_system/: mod.rs
crates/vulpi-storage/src/interner/: mod.rs  no_rc.rs
crates/vulpi-storage/src/namespace/: mod.rs
crates/vulpi-storage/src/vfs/: mod.rs  real.rs
crates/vulpi-syntax/: Cargo.toml
crates/vulpi-syntax/src/: abstract.rs  concrete.rs  elaborated.rs  lambda.rs  lib.rs  resolved.rs  token.rs  tokens.rs  tree.rs
crates/vulpi-syntax/src/abstract/: ident.rs  mod.rs  resolved.rs  visitor.rs
crates/vulpi-syntax/src/concrete/: expr.rs  kind.rs  literal.rs  mod.rs  pattern.rs  statements.rs  top_level.rs  type.rs
crates/vulpi-tests/: Cargo.toml
crates/vulpi-tests/src/: lib.rs  util.rs
crates/vulpi-tests/suite/: Main.expect  Main.vp  Use.expect  Use.vp  abstract.expect  abstract.vp  algebraic.expect  algebraic.vp  effects.expect  effects.vp  expr.expect  expr.vp  expressions.expect  expressions.vp  handler.expect  handler.vp  layout_parsing.expect  layout_parsing.vp  modules.expect  modules.vp  pipe.expect  pipe.vp  records.expect  records.vp  tuple.expect  tuple.vp  unicode_escape.expect  unicode_escape.vp  when.expect  when.vp
crates/vulpi-tests/tests/: suite.rs
crates/vulpi-tree/: Cargo.toml
crates/vulpi-typer/: Cargo.toml
crates/vulpi-typer/src/: ambient.rs  context.rs  coverage.rs  declare.rs  env.rs  error.rs  errors.rs  eval.rs  kind.rs  lib.rs  module.rs  types.rs  unify.rs
crates/vulpi-typer/src/apply/: expr.rs  mod.rs  pat.rs
crates/vulpi-typer/src/check/: expr.rs  mod.rs  pat.rs
crates/vulpi-typer/src/infer/: effect.rs  expr.rs  kind.rs  literal.rs  mod.rs  pat.rs  stmt.rs  top_level.rs  typ.rs  type.rs  types.rs
crates/vulpi-typer/src/type/: eval.rs  mod.rs  unify.rs
crates/vulpi-vfs/: Cargo.toml
crates/vulpi-vfs/src/: lib.rs  path.rs  real.rs
example/: B.vp  Bindings.vp  C.vp  D.vp  DOM.vp  E.vp  Elements.vp  List.vp  Main.vp  Prelude.vp
examples/: B.vp  Main.vp  all.vp
examples/Main/: T.vp
