[workspace]

members = [
    "crates/vulpi-parser",
    "crates/vulpi-location",
    "crates/vulpi-macros",
    "crates/vulpi-syntax",
    "crates/vulpi-build",
    "crates/vulpi-report",
    "crates/vulpi-desugar",
    "crates/vulpi-storage",
    "crates/vulpi-resolver",
    "crates/vulpi-typer",
    "crates/vulpi-cli",
    "crates/vulpi-tests",
]

resolver = "1"
