[workspace]

members = [
    "crates/vulpi-intern",
    "crates/vulpi-lexer",
    "crates/vulpi-location",
    "crates/vulpi-macros",
    "crates/vulpi-parser",
    "crates/vulpi-report",
    "crates/vulpi-show",
    "crates/vulpi-syntax",
    "crates/vulpi-tests",
    "crates/vulpi-vfs",
    "crates/vulpi-resolver",
    "crates/vulpi-typer",
    "crates/vulpi-cli",
    "crates/vulpi-ir",
]

resolver = "1"
