[package]
name = "vulpi-build"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

vulpi-report = { path = "../vulpi-report" }
vulpi-storage = { path = "../vulpi-storage" }
vulpi-parser = { path = "../vulpi-parser" }
vulpi-syntax = { path = "../vulpi-syntax" }
vulpi-tree = { path = "../vulpi-tree" }
vulpi-desugar = { path = "../vulpi-desugar" }
vulpi-resolver = { path = "../vulpi-resolver" }
tracing = "0.1.37"
