[package]
name = "vulpi-build"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulpi-lexer = { path = "../vulpi-lexer" }
vulpi-location = { path = "../vulpi-location" }
vulpi-parser = { path = "../vulpi-parser" }
vulpi-report = { path = "../vulpi-report" }
vulpi-show = { path = "../vulpi-show" }
vulpi-vfs = { path = "../vulpi-vfs" }
vulpi-resolver = { path = "../vulpi-resolver" }
vulpi-syntax = { path = "../vulpi-syntax" }