[package]
name = "vulpi-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { version = "4.3.10", features = ["derive"] }

vulpi-report = { path = "../vulpi-report" }
vulpi-storage = { path = "../vulpi-storage" }
vulpi-parser = { path = "../vulpi-parser" }
vulpi-syntax = { path = "../vulpi-syntax" }
vulpi-show = { path = "../vulpi-show" }
vulpi-desugar = { path = "../vulpi-desugar" }
vulpi-build = { path = "../vulpi-build" }
vulpi-resolver = { path = "../vulpi-resolver" }
