[package]
name = "vulpi-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

vulpi-build = { path = "../vulpi-build" }
vulpi-report = { path = "../vulpi-report" }
vulpi-vfs = { path = "../vulpi-vfs" }
vulpi-intern = { path = "../vulpi-intern" }