[package]
name = "vulpi-ir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulpi-location = { path = "../vulpi-location" }
vulpi-syntax = { path = "../vulpi-syntax" }
vulpi-intern = { path = "../vulpi-intern" }
vulpi-typer = { path = "../vulpi-typer" }
vulpi-show = { path = "../vulpi-show" }
vulpi-macros = { path = "../vulpi-macros" }
