[package]
name = "vulpi-ir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulpi-intern = { path = "../vulpi-intern" }
vulpi-syntax = { path = "../vulpi-syntax" }
vulpi-typer = { path = "../vulpi-typer" }
vulpi-macros = { path = "../vulpi-macros" }
vulpi-show = { path = "../vulpi-show" }
vulpi-location = { path = "../vulpi-location" }