[package]
name = "vulpi-js"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulpi-syntax = { path = "../vulpi-syntax" }
vulpi-ir = { path = "../vulpi-ir" }
vulpi-intern = { path = "../vulpi-intern" }
vulpi-location = { path = "../vulpi-location" }

resast = "0.5.0"
resw = "0.6.0-alpha.2"
petgraph = "0.6.4"
