[package]
name = "vulpi-lexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


vulpi-intern = { path = "../vulpi-intern" }
vulpi-location = { path = "../vulpi-location" }
vulpi-syntax = { path = "../vulpi-syntax" }
vulpi-report = { path = "../vulpi-report" }
