[package]
name = "vulpi-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulpi-report = { path = "../vulpi-report" }
vulpi-location = { path = "../vulpi-location" }
vulpi-intern = { path = "../vulpi-intern" }
vulpi-syntax = { path = "../vulpi-syntax" }
vulpi-lexer = { path = "../vulpi-lexer" }
