[package]
name = "vulpi-resolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

vulpi-intern = { path = "../vulpi-intern" }
vulpi-syntax = { path = "../vulpi-syntax" }
vulpi-location = { path = "../vulpi-location" }
vulpi-report = { path = "../vulpi-report" }
vulpi-show = { path = "../vulpi-show" }
vulpi-macros = { path = "../vulpi-macros" }

im-rc = "15.1.0"
