[package]
name = "vulpi-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

vulpi-show = { path = "../vulpi-show" }
vulpi-macros = { path = "../vulpi-macros" }

lazy_static = "1.4.0"
petgraph = "0.6.3"
im-rc = "15.1.0"
