[package]
name = "vulpi-syntax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

vulpi-location = { path = "../vulpi-location" }
vulpi-intern = { path = "../vulpi-intern" }

vulpi-show = { path = "../vulpi-show" }
vulpi-macros = { path = "../vulpi-macros" }

im-rc = "15.1.0"
